[package]
name = "network-shapley"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "shapley-cli"
path = "src/bin/shapley_cli.rs"
required-features = ["cli"]

[[example]]
name = "simple"
[[example]]
name = "csv_demand1"
[[example]]
name = "csv_demand2"

[[bench]]
name = "coalition"
harness = false
required-features = ["serde"]

[dependencies]
borsh = { version = "1", features = [ "derive" ] ,optional = true }
csv = { version = "1", optional = true }
highs = "2.1"
rand = "0.9"
rayon = "1"
sprs = { version = "0.11.4", default-features = false }
web-time = "1.1.0"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tabled = { version = "0", optional = true, features = [ "std" ]}
thiserror = "2"

[dev-dependencies]
criterion = "0.5"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0"

[features]
serde = ["dep:csv", "dep:serde", "dep:tabled"]
borsh = ["dep:borsh"]
cli = ["serde", "dep:serde_json"]

[profile.release]
lto = true
codegen-units = 1
